# nwp-consumer

./: .all-contributorsrc  .gitignore  ARCHITECTURE.md  Containerfile  README.md  TODO.md  pyproject.toml  scratch.py  taskfile.yml  ut-report.xml
.github/workflows/: branch_ci.yml  ci.yaml  ci.yml  main_ci.yml  merged_ci.yml  tagged_ci.yml
src/nwp_consumer/: __init__.py  main.py
src/nwp_consumer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nwp_consumer/cmd/: __init__.py  main.py  nwp_consumer.py  test_main.py
src/nwp_consumer/internal/: __init__.py  cache.py  models.py
src/nwp_consumer/internal/config/: __init__.py  config.py  env.py  test_config.py  test_env.py
src/nwp_consumer/internal/core/: __init__.py  domain.py
src/nwp_consumer/internal/core/domain/: __init__.py  _sharedtypes.py  area.py  notification.py  parameter.py  parameters.py  postprocess.py  repometadata.py  request.py  storemetadata.py  tensor.py  test_area.py  test_storemetadata.py  test_tensor.py
src/nwp_consumer/internal/core/ports/: __init__.py  ports.py  repositories.py  services.py
src/nwp_consumer/internal/core/service/: __init__.py  consumer.py  memory.py  test_consumer.py
src/nwp_consumer/internal/entities/: __init__.py  _sharedtypes.py  coordinates.py  modelmetadata.py  notification.py  parameters.py  performance.py  postprocess.py  repometadata.py  storemetadata.py  tensorstore.py  test_coordinates.py  test_modelmetadata.py  test_parameters.py  test_postprocess.py  test_repometadata.py  test_storemetadata.py  test_tensorstore.py
src/nwp_consumer/internal/handlers/: __init__.py  cli.py  test_cli.py
src/nwp_consumer/internal/inputs/: __init__.py  common.py
src/nwp_consumer/internal/inputs/ceda/: README.md  __init__.py  _models.py  client.py  test_client.py
src/nwp_consumer/internal/inputs/cmc/: CMC_glb_TMP_TGL_2_latlon.15x.15_2023080900_P027.grib2  CMC_glb_VGRD_ISBL_200_latlon.15x.15_2023080900_P027.grib2  __init__.py  _consts.py  _models.py  client.py  test_client.py
src/nwp_consumer/internal/inputs/ecmwf/: README.md  __init__.py  _models.py  client.py  mars.py  s3.py  test_client.py  test_list_response.txt  test_mars.py  test_multiarea.grib  test_s3.py
src/nwp_consumer/internal/inputs/icon/: _consts.py  _models.py  client.py  test_client.py  test_icon_001_T_2M.grib2.bz2  test_icon_europe_000_ASOB_S.grib2  test_icon_europe_001_CLCL.grib2
src/nwp_consumer/internal/inputs/meteofrance/: SP1_00H24H_t.grib2  _consts.py  _models.py  client.py  test_client.py
src/nwp_consumer/internal/inputs/meteomatics/: _models.py  client.py  test_client.py  test_solar.csv
src/nwp_consumer/internal/inputs/metoffice/: README.md  __init__.py  _models.py  client.py  test_client.py
src/nwp_consumer/internal/inputs/noaa/: __init__.py  _consts.py  _models.py  aws.py  gfs.t06z.pgrb2.0p25.f001  ncar.py  test_aws.py  test_ncar.py
src/nwp_consumer/internal/outputs/: __init__.py
src/nwp_consumer/internal/outputs/huggingface/: __init__.py  client.py  test_client.py
src/nwp_consumer/internal/outputs/localfs/: __init__.py  client.py  test_client.py  test_fakefile.grib
src/nwp_consumer/internal/outputs/s3/: __init__.py  client.py  test_client.py
src/nwp_consumer/internal/ports/: __init__.py  repositories.py  services.py
src/nwp_consumer/internal/repositories/: __init__.py
src/nwp_consumer/internal/repositories/model/ecmwf/: open_ifs.py
src/nwp_consumer/internal/repositories/model_repositories/: __init__.py  ceda_ftp.py  ecmwf_mars.py  ecmwf_realtime.py  metoffice_global.py  mo_datahub.py  noaa_gfs.py  noaa_s3.py  test_HRES-GFS_lcc.grib  test_HRES-IFS_ssrd.grib  test_ceda_ftp.py  test_ecmwf_mars.py  test_ecmwf_realtime.py  test_metoffice_global.py  test_mo_datahub.py  test_noaa_gfs.py  test_noaa_s3.py
src/nwp_consumer/internal/repositories/model_repositories/test_gribs/: test_CEDAFTP_UM-Global_ssrd_20241105T00_S01-03.grib  test_CEDAFTP_UM-Global_u_20241105T00_S01-03_AreaC.grib  test_ECMWFMARS_enfo-em_t2m-si10-si100-msp_20240101T00_S03-06.grib  test_ECMWFMARS_enfo-es_t2m-si10-si100-msp_20240101T00_S03-06.grib  test_ECMWFRealtime_HRES-IFS_10u_20241104T00_S60.grib  test_MODatahub_UM-Global_t2m_20241120T00_S00.grib  test_NOAAS3_HRES-GFS_aptmp_20210509T06_S00.grib  test_NOAAS3_HRES-GFS_r_20210509T06_S00.grib
src/nwp_consumer/internal/repositories/notification/: __init__.py  stdout.py
src/nwp_consumer/internal/repositories/notification_repositories/: __init__.py  dagster.py  stdout.py
src/nwp_consumer/internal/repositories/raw_repositories/: __init__.py  ceda.py  ceda_ftp.py  ecmwf_mars.py  ecmwf_realtime.py  mo_datahub.py  noaa_s3.py  test_ceda.py  test_ceda_ftp.py  test_ecmwf_mars.py  test_ecmwf_realtime.py  test_mo_datahub.py  test_noaa_s3.py
src/nwp_consumer/internal/repositories/raw_repositories/test_gribs/: test_MODatahub_UM-Global_u10_20241120T00_S17.grib  test_NOAAS3_HRES-GFS_10u_20210509T06_S00.grib  test_NOAAS3_HRES-GFS_dswrf-dlwrf_20250129T06_S27.grib  test_NOAAS3_HRES-GFS_tcc_20250129T00_S06.grib
src/nwp_consumer/internal/repositories/source_repository/ecmwf/: ecmwf_mars.py  test_ecmwf_mars.py
src/nwp_consumer/internal/repositories/source_repository/icon/: dwd_icon.py  test_dwd_icon.py
src/nwp_consumer/internal/repositories/sourcerepo/: ecmwf_mars.py  test_ecmwf_mars.py
src/nwp_consumer/internal/service/: __init__.py  consumer.py  monthlyZarrDataset.py  service.py  specificInitTime.py  test_consumer.py  test_createMonthlyZarrDataset.py  test_service.py  test_specificInitTime.py
src/nwp_consumer/internal/services/: __init__.py  _dummy_adaptors.py  _performance.py  archiver_service.py  consumer.py  consumer_service.py  test_archiver.py  test_consumer.py  test_consumer_service.py
src/test_integration/: test_inputs.py  test_inputs_integration.py  test_integration.py  test_service.py  test_service_integration.py
